--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "mongoose": "^8.6.0",
+    "near-api-js": "^4.0.4",
     "nodemon": "^3.1.4"
   }
 }
