--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,10 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
-    "mongoose": "^8.6.0",
-    "near-api-js": "^4.0.4",
-    "nodemon": "^3.1.4"
+    "mongoose": "^8.6.1",
+    "near-api-js": "^5.0.0",
+    "node-fetch": "^3.3.2",
+    "nodemon": "^3.1.4",
+    "react-scripts": "^5.0.1"
   }
 }
