--- a/backend/package.json
+++ b/backend/package.json
@@ -8,15 +8,18 @@
     "client": "npm start --prefix ../src/frontend"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "compression": "^1.7.4",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "mongoose": "^8.6.1",
     "near-api-js": "^5.0.0",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.4",
+    "openai": "^4.58.1",
     "react-scripts": "^5.0.1"
   }
 }
